--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prestart": "sudo ./bin/prestart",
     "start": "sudo node ./bin/www",
-    "stop": "./bin/stop" 
+    "stop": "./bin/stop", 
+    "restart": "sudo kill `sudo lsof -t -i:80` && npm start"
   },
   "dependencies": {
     "angular": "^1.3.9",
