--- a/package.json
+++ b/package.json
@@ -5,21 +5,24 @@
   "scripts": {
     "prestart": "sudo ./bin/prestart",
     "start": "sudo node ./bin/www",
-    "stop": "./bin/stop", 
+    "stop": "./bin/stop",
     "restart": "sudo kill `sudo lsof -t -i:80` && npm start"
   },
   "dependencies": {
     "angular": "^1.3.9",
     "angular-bootstrap": "^0.12.0",
     "angular-route": "^1.3.10",
-    "body-parser": "~1.10.1",
+    "bcryptjs": "^2.1.0",
+    "body-parser": "^1.10.2",
     "bootstrap": "^3.3.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "ejs": "^2.2.1",
     "express": "~4.11.0",
+    "isbn": "^0.2.0",
     "jade": "~1.9.0",
     "morgan": "~1.5.1",
+    "multer": "^0.1.7",
     "seraph": "^0.9.12",
     "serve-favicon": "~2.2.0",
     "stylus": "0.42.3"
