--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-isbn": "~0.1.0",
     "angular-base64": "~2.0.3",
     "bcryptjs": "~2.1.0",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "ngModal": "~1.2.2"
   },
   "resolutions": {
     "angular": "1.3.13"
